cmake_minimum_required(VERSION 3.21)
project(test)

set(CMAKE_CXX_STANDARD 14)
MATH(EXPR stack_size "1024*1024*1024")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

add_executable(U91718 U91718.cpp)
add_executable(U87176 U87176.cpp)
add_executable(U128599 U128599.cpp)
add_executable(U103440 U103440.cpp)
add_executable(P2119 P2119.cpp)
add_executable(P3941 P3941.cpp)
add_executable(P1083 P1083.cpp)
add_executable(U76030 U76030.cpp)
add_executable(U128816 U128816.cpp)
add_executable(P4185 P4185.cpp)
add_executable(P1562 P1562.cpp)
add_executable(P2827 P2827.cpp)
add_executable(_temp _temp.cpp)
add_executable(DynamicSegmentTree DynamicSegmentTree.cpp)
add_executable(U127164 U127164.cpp)
add_executable(U127202 U127202.cpp)
add_executable(U127533 U127533.cpp)
add_executable(P1514 P1514.cpp)
add_executable(CF1183G CF1183G.cpp)
add_executable(P2540 P2540.cpp)
add_executable(CF1117C CF1117C.cpp)
add_executable(CF1114E CF1114E.cpp)
add_executable(P1979 P1979.cpp)
add_executable(CF1132D CF1132D.cpp)