cmake_minimum_required(VERSION 3.21)
project(test)

set(CMAKE_CXX_STANDARD 14)
MATH(EXPR stack_size "1024*1024*1024")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

add_executable(U91718 U91718.cpp)
add_executable(U87176 U87176.cpp)
add_executable(U128599 U128599.cpp)
add_executable(U103440 U103440.cpp)
add_executable(P2119 P2119.cpp)
add_executable(P3941 P3941.cpp)
add_executable(P1083 P1083.cpp)
add_executable(U76030 U76030.cpp)
add_executable(U128816 U128816.cpp)
add_executable(P4185 P4185.cpp)
add_executable(P1562 P1562.cpp)
add_executable(P2827 P2827.cpp)
add_executable(_temp _temp.cpp)
add_executable(DynamicSegmentTree DynamicSegmentTree.cpp)
add_executable(U127164 U127164.cpp)
add_executable(U127202 U127202.cpp)
add_executable(U127533 U127533.cpp)
add_executable(P1514 P1514.cpp)
add_executable(CF1183G CF1183G.cpp)
add_executable(P2540 P2540.cpp)
add_executable(CF1117C CF1117C.cpp)
add_executable(CF1114E CF1114E.cpp)
add_executable(P1979 P1979.cpp)
add_executable(CF1132D CF1132D.cpp)
add_executable(discount ttt/discount.cpp)
add_executable(game ttt/game.cpp)
add_executable(T275824 T275824.cpp)
add_executable(Random Random.cpp)
add_executable(T275765 T275765.cpp)
add_executable(P1070 P1070.cpp)
add_executable(P1372 P1372.cpp)
add_executable(P1414 P1414.cpp)
add_executable(P5656 P5656.cpp)
add_executable(P3986 P3986.cpp)
add_executable(P1313 P1313.cpp)
add_executable(CF937B CF937B.cpp)
add_executable(P1941 P1941.cpp)